app/assets/stylesheets/simple_sidebar.scss
.glyphicon-menu-hamburger,
.glyphicon-remove {
  display: block;
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 10px;
  font-size: 20px;
  color: #555;
  background-color: white;
  z-index: 2;
  &:hover {
    cursor: pointer;
    color: #333;
  }
}

#content-container {
  position: absolute;
  top:0;right:0;bottom:0;left:0;
  background-color: white;
  line-height: 1.5em;
  padding-top: 30px;
  padding-bottom: 100px;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 9998;
  nav {
    left: -100%;
    width: 100%;
    overflow: hidden;
  }
}


#content-container.nav-shown {
  nav {
    width: 100vw;
    left: 0px;
    z-index: 9999 !important;
    .nav-links {
      padding: 0;
    }
  }
}

nav {
  text-align: center;
}

@media(min-width:600px) {
  .glyphicon {
    display: none;
  }
  #content-container {
    left: 180px !important;
    right: 0 !important;

    nav {
      left: 0;
      width: 180px !important;
      .nav-links {
        padding-left: 20px !important;
        text-align: left;
      }
    }
  }
}

